@@ -37,6 +37,7 @@ When creating a new `Perform Action` referencing an existing `Action`, all compa
 - https://github.com/eclipse-syson/syson/issues/1272[#1272] [general-view] Fix an issue where the execution of _Add existing elements_ tool adding `Succession` with guard involving 'start' or 'done' were not well displayed.
 - https://github.com/eclipse-syson/syson/issues/1297[#1297] Fix an issue where the children of the `Package` graphical node lost their position when diagram is rendered after tab switching.
 - https://github.com/eclipse-syson/syson/issues/1300[#1300] [general-view] Fix wrong tool section name found in some compartments' palette.
+- https://github.com/eclipse-syson/syson/issues/1303[#1303] [general-view] Fix the name of `Constraint` creation tools inside `Requirement`.
 
 === Improvements
 
